
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fprintf (int ,char*,unsigned long) ;
 int our_base ;
 int stdout ;

void addr_to_nodes(unsigned long addr, int *nodes)
{
 int i;
 int min = 0x80000000 / 8;
 int max = 0x7fffffff / 8;

 if ((addr < (our_base - min)) ||
     (addr > (our_base + max))) {
  fprintf(stdout, "Error: Unable to dump address %p\n", addr);
  exit(1);
 }

 for (i = 0; i < 8; i++) {
  nodes[i] = ((int)(addr - our_base) << 3) | i;
 }

 return;
}
