; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_40810.c_addr_to_nodes.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_40810.c_addr_to_nodes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@our_base = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Error: Unable to dump address %p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @addr_to_nodes(i64 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 268435456, i32* %6, align 4
  store i32 268435455, i32* %7, align 4
  %8 = load i64, i64* %3, align 8
  %9 = load i32, i32* @our_base, align 4
  %10 = load i32, i32* %6, align 4
  %11 = sub nsw i32 %9, %10
  %12 = sext i32 %11 to i64
  %13 = icmp ult i64 %8, %12
  br i1 %13, label %21, label %14

14:                                               ; preds = %2
  %15 = load i64, i64* %3, align 8
  %16 = load i32, i32* @our_base, align 4
  %17 = load i32, i32* %7, align 4
  %18 = add nsw i32 %16, %17
  %19 = sext i32 %18 to i64
  %20 = icmp ugt i64 %15, %19
  br i1 %20, label %21, label %26

21:                                               ; preds = %14, %2
  %22 = load i32, i32* @stdout, align 4
  %23 = load i64, i64* %3, align 8
  %24 = call i32 @fprintf(i32 %22, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i64 %23)
  %25 = call i32 @exit(i32 1) #3
  unreachable

26:                                               ; preds = %14
  store i32 0, i32* %5, align 4
  br label %27

27:                                               ; preds = %43, %26
  %28 = load i32, i32* %5, align 4
  %29 = icmp slt i32 %28, 8
  br i1 %29, label %30, label %46

30:                                               ; preds = %27
  %31 = load i64, i64* %3, align 8
  %32 = load i32, i32* @our_base, align 4
  %33 = sext i32 %32 to i64
  %34 = sub i64 %31, %33
  %35 = trunc i64 %34 to i32
  %36 = shl i32 %35, 3
  %37 = load i32, i32* %5, align 4
  %38 = or i32 %36, %37
  %39 = load i32*, i32** %4, align 8
  %40 = load i32, i32* %5, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i32, i32* %39, i64 %41
  store i32 %38, i32* %42, align 4
  br label %43

43:                                               ; preds = %30
  %44 = load i32, i32* %5, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %5, align 4
  br label %27

46:                                               ; preds = %27
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, i64) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
